@@ -44,37 +44,39 @@ let use_ocamlfind = ref false
    perhaps later we need something better *)
 let is_core_tool = function "ocamlfind" | "menhir" -> false | _ -> true
 
-let mk_virtual_solvers =
+let find_tool cmd =
   let dir = Ocamlbuild_where.bindir in
+  let core_tool = is_core_tool cmd in
+  let opt = cmd ^ ".opt" in
+  let search_in_path = memo Command.search_in_path in
+  if sys_file_exists !dir then
+    let long = filename_concat !dir cmd in
+    let long_opt = long ^ ".opt" in
+      (* This defines how the command will be found *)
+    let choices =
+      [(fun () -> if file_or_exe_exists long_opt then Some long_opt else None);
+       (fun () -> if file_or_exe_exists long then Some long else None)] in
+      (* For non core tool the preference is too look at PATH first *)
+    let choices' =
+      [fun () ->
+        try let _ = search_in_path opt in Some opt
+        with Not_found -> Some cmd]
+    in
+    let choices = if core_tool then choices @ choices' else choices' @ choices in
+    try
+      match (List.find (fun choice -> not (choice () = None)) choices) () with
+        Some cmd -> cmd
+      | None -> raise Not_found
+    with Not_found -> failwith (Printf.sprintf "Can't find tool: %s" cmd)
+  else
+    try let _ = search_in_path opt in opt
+    with Not_found -> cmd
+
+let mk_virtual_solvers =
   List.iter begin fun cmd ->
-    let opt = cmd ^ ".opt" in
-    let a_opt = A opt in
-    let a_cmd = A cmd in
-    let search_in_path = memo Command.search_in_path in
-    let solver core_tool () =
-      if sys_file_exists !dir then
-        let long = filename_concat !dir cmd in
-        let long_opt = long ^ ".opt" in
-        (* This defines how the command will be found *)
-        let choices =
-          [(fun () -> if file_or_exe_exists long_opt then Some (A long_opt) else None);
-           (fun () -> if file_or_exe_exists long then Some (A long) else None)] in
-        (* For non core tool the preference is too look at PATH first *)
-        let choices' =
-          [fun () ->
-            try let _ = search_in_path opt in Some a_opt
-            with Not_found -> Some a_cmd]
-        in
-        let choices = if core_tool then choices @ choices' else choices' @ choices in
-        try
-          match (List.find (fun choice -> not (choice () = None)) choices) () with
-            Some cmd -> cmd
-          | None -> raise Not_found
-        with Not_found -> failwith (Printf.sprintf "Can't find tool: %s" cmd)
-      else
-        try let _ = search_in_path opt in a_opt
-        with Not_found -> a_cmd
-    in Command.setup_virtual_command_solver (String.uppercase cmd) (solver (is_core_tool cmd))
+    let solver () =
+      A (find_tool cmd)
+    in Command.setup_virtual_command_solver (String.uppercase cmd) solver
   end
 
 let () =
@@ -217,7 +219,7 @@ let spec = ref (
    "-install-lib-dir", Set_string Ocamlbuild_where.libdir, "<path> Set the install library directory";
    "-install-bin-dir", Set_string Ocamlbuild_where.bindir, "<path> Set the install binary directory";
    "-where", Unit (fun () -> print_endline !Ocamlbuild_where.libdir; raise Exit_OK), " Display the install library directory";
-
+   "-which", String (fun cmd -> print_endline (find_tool cmd); raise Exit_OK), "<cmd> Display path to the tool command";
    "-ocamlc", set_cmd ocamlc, "<command> Set the OCaml bytecode compiler";
    "-ocamlopt", set_cmd ocamlopt, "<command> Set the OCaml native compiler";
    "-ocamldep", set_cmd ocamldep, "<command> Set the OCaml dependency tool";
